--- a/index.html
+++ b/index.html
@@ -3,17 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://fav.farm/🐞" />
     <meta
       property="og:title"
-      content="CtrlB Pipeline B"
+      content="CtrlB Pipeline Builder"
     />
     <meta property="og:type" content="website" />
 
     <meta property="og:locale" content="en_US" />
     <title>
-      CtrlB: Interactive Pipeline Builder Application with React, Vite, Tailwind
-      CSS, and ReactFlow.
+      CtrlB
     </title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
